test/files/invalid/rpc_bad_types.fbs
struct Vec2 {
  x: float;
  y: float;
}

table Foo {
  x: int;
}

rpc_service Bad {
  M1(Vec2): Foo;
  M2(Foo): string;
}
